@@ -16,8 +16,10 @@
 
 package org.springframework.cloud.kubernetes.client.config;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import com.github.tomakehurst.wiremock.WireMockServer;
 import com.github.tomakehurst.wiremock.client.WireMock;
@@ -33,11 +35,16 @@ import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
-import org.springframework.cloud.kubernetes.commons.KubernetesClientProperties;
+import org.springframework.boot.test.system.CapturedOutput;
+import org.springframework.boot.test.system.OutputCaptureExtension;
 import org.springframework.cloud.kubernetes.commons.KubernetesNamespaceProvider;
 import org.springframework.cloud.kubernetes.commons.config.ConfigMapConfigProperties;
+import org.springframework.cloud.kubernetes.commons.config.Constants;
 import org.springframework.cloud.kubernetes.commons.config.NamespaceResolutionFailedException;
+import org.springframework.cloud.kubernetes.commons.config.RetryProperties;
+import org.springframework.core.env.CompositePropertySource;
 import org.springframework.core.env.PropertySource;
 import org.springframework.mock.env.MockEnvironment;
 
@@ -53,17 +60,19 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
  * @author Ryan Baxter
  * @author Isik Erhan
  */
+@ExtendWith(OutputCaptureExtension.class)
 class KubernetesClientConfigMapPropertySourceLocatorTests {
 
 	private static final V1ConfigMapList PROPERTIES_CONFIGMAP_LIST = new V1ConfigMapList()
-			.addItemsItem(
-					new V1ConfigMapBuilder()
-							.withMetadata(new V1ObjectMetaBuilder().withName("bootstrap-640").withNamespace("default")
-									.withResourceVersion("1").build())
-							.addToData("application.properties",
-									"spring.cloud.kubernetes.configuration.watcher.refreshDelay=0\n"
-											+ "logging.level.org.springframework.cloud.kubernetes=TRACE")
-							.build());
+		.addItemsItem(new V1ConfigMapBuilder()
+			.withMetadata(new V1ObjectMetaBuilder().withName("bootstrap-640")
+				.withNamespace("default")
+				.withResourceVersion("1")
+				.build())
+			.addToData(Constants.APPLICATION_PROPERTIES,
+					"spring.cloud.kubernetes.configuration.watcher.refreshDelay=0\n"
+							+ "logging.level.org.springframework.cloud.kubernetes=TRACE")
+			.build());
 
 	private static WireMockServer wireMockServer;
 
@@ -95,35 +104,34 @@ class KubernetesClientConfigMapPropertySourceLocatorTests {
 	void locateWithoutSources() {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get("/api/v1/namespaces/default/configmaps")
-				.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties();
-		configMapConfigProperties.setName("bootstrap-640");
+			.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(), List.of(),
+				Map.of(), true, "bootstrap-640", null, false, false, false, RetryProperties.DEFAULT);
 		MockEnvironment mockEnvironment = new MockEnvironment();
 		mockEnvironment.setProperty("spring.cloud.kubernetes.client.namespace", "default");
 		PropertySource<?> propertySource = new KubernetesClientConfigMapPropertySourceLocator(api,
-				configMapConfigProperties, new KubernetesNamespaceProvider(mockEnvironment)).locate(ENV);
+				configMapConfigProperties, new KubernetesNamespaceProvider(mockEnvironment))
+			.locate(ENV);
 		assertThat(propertySource.containsProperty("spring.cloud.kubernetes.configuration.watcher.refreshDelay"))
-				.isTrue();
+			.isTrue();
 	}
 
 	@Test
 	void locateWithSources() {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get("/api/v1/namespaces/default/configmaps")
-				.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties();
-		configMapConfigProperties.setName("fake-name");
-		ConfigMapConfigProperties.Source source = new ConfigMapConfigProperties.Source();
-		source.setName("bootstrap-640");
-		source.setNamespace("default");
-		List<ConfigMapConfigProperties.Source> sources = Collections.singletonList(source);
-		configMapConfigProperties.setSources(sources);
-		KubernetesClientProperties kubernetesClientProperties = new KubernetesClientProperties();
-		kubernetesClientProperties.setNamespace("dev");
+			.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
+
+		ConfigMapConfigProperties.Source source = new ConfigMapConfigProperties.Source("bootstrap-640", "default",
+				Collections.emptyMap(), null, null, null);
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(),
+				List.of(source), Map.of(), true, "fake-name", null, false, false, false, RetryProperties.DEFAULT);
+
 		PropertySource<?> propertySource = new KubernetesClientConfigMapPropertySourceLocator(api,
-				configMapConfigProperties, new KubernetesNamespaceProvider(new MockEnvironment())).locate(ENV);
+				configMapConfigProperties, new KubernetesNamespaceProvider(new MockEnvironment()))
+			.locate(ENV);
 		assertThat(propertySource.containsProperty("spring.cloud.kubernetes.configuration.watcher.refreshDelay"))
-				.isTrue();
+			.isTrue();
 	}
 
 	/**
@@ -137,14 +145,14 @@ class KubernetesClientConfigMapPropertySourceLocatorTests {
 	void testLocateWithoutNamespaceConstructor() {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get("/api/v1/namespaces/default/configmaps")
-				.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties();
-		configMapConfigProperties.setName("bootstrap-640");
-		KubernetesClientProperties kubernetesClientProperties = new KubernetesClientProperties();
-		kubernetesClientProperties.setNamespace(""); // empty on purpose
+			.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
+
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(), List.of(),
+				Map.of(), true, "bootstrap-640", null, false, false, false, RetryProperties.DEFAULT);
+
 		assertThatThrownBy(() -> new KubernetesClientConfigMapPropertySourceLocator(api, configMapConfigProperties,
-				new KubernetesNamespaceProvider(new MockEnvironment())).locate(ENV))
-						.isInstanceOf(NamespaceResolutionFailedException.class);
+				new KubernetesNamespaceProvider(new MockEnvironment()))
+			.locate(ENV)).isInstanceOf(NamespaceResolutionFailedException.class);
 	}
 
 	/**
@@ -158,49 +166,53 @@ class KubernetesClientConfigMapPropertySourceLocatorTests {
 	void testLocateWithoutNamespace() {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get("/api/v1/namespaces/default/configmaps")
-				.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties();
-		configMapConfigProperties.setName("bootstrap-640");
-		KubernetesClientProperties kubernetesClientProperties = new KubernetesClientProperties();
-		kubernetesClientProperties.setNamespace(""); // empty on purpose
+			.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(), List.of(),
+				Map.of(), true, "bootstrap-640", null, false, false, false, RetryProperties.DEFAULT);
 		assertThatThrownBy(() -> new KubernetesClientConfigMapPropertySourceLocator(api, configMapConfigProperties,
-				new KubernetesNamespaceProvider(ENV)).locate(ENV))
-						.isInstanceOf(NamespaceResolutionFailedException.class);
+				new KubernetesNamespaceProvider(ENV))
+			.locate(ENV)).isInstanceOf(NamespaceResolutionFailedException.class);
 	}
 
 	@Test
 	public void locateShouldThrowExceptionOnFailureWhenFailFastIsEnabled() {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get("/api/v1/namespaces/default/configmaps")
-				.willReturn(aResponse().withStatus(500).withBody("Internal Server Error")));
+			.willReturn(aResponse().withStatus(500).withBody("Internal Server Error")));
 
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties();
-		configMapConfigProperties.setName("bootstrap-640");
-		configMapConfigProperties.setNamespace("default");
-		configMapConfigProperties.setFailFast(true);
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(), List.of(),
+				Map.of(), true, "bootstrap-640", "default", false, false, true, RetryProperties.DEFAULT);
 
 		KubernetesClientConfigMapPropertySourceLocator locator = new KubernetesClientConfigMapPropertySourceLocator(api,
 				configMapConfigProperties, new KubernetesNamespaceProvider(new MockEnvironment()));
 
 		assertThatThrownBy(() -> locator.locate(new MockEnvironment())).isInstanceOf(IllegalStateException.class)
-				.hasMessage("Internal Server Error");
+			.hasMessage("Internal Server Error");
 	}
 
 	@Test
-	public void locateShouldNotThrowExceptionOnFailureWhenFailFastIsDisabled() {
+	public void locateShouldNotThrowExceptionOnFailureWhenFailFastIsDisabled(CapturedOutput output) {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get("/api/v1/namespaces/default/configmaps")
-				.willReturn(aResponse().withStatus(500).withBody("Internal Server Error")));
+			.willReturn(aResponse().withStatus(500).withBody("Internal Server Error")));
 
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties();
-		configMapConfigProperties.setName("bootstrap-640");
-		configMapConfigProperties.setNamespace("default");
-		configMapConfigProperties.setFailFast(false);
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(), List.of(),
+				Map.of(), true, "bootstrap-640", "default", false, false, false, RetryProperties.DEFAULT);
 
 		KubernetesClientConfigMapPropertySourceLocator locator = new KubernetesClientConfigMapPropertySourceLocator(api,
 				configMapConfigProperties, new KubernetesNamespaceProvider(new MockEnvironment()));
 
-		assertThatNoException().isThrownBy(() -> locator.locate(new MockEnvironment()));
+		List<PropertySource<?>> result = new ArrayList<>();
+		assertThatNoException().isThrownBy(() -> {
+			PropertySource<?> source = locator.locate(new MockEnvironment());
+			result.add(source);
+		});
+
+		assertThat(result.get(0)).isInstanceOf(CompositePropertySource.class);
+		CompositePropertySource composite = (CompositePropertySource) result.get(0);
+		assertThat(composite.getPropertySources()).hasSize(0);
+		assertThat(output.getOut()).contains("Failed to load source:");
+
 	}
 
 }
