@@ -22,10 +22,10 @@ import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -52,10 +52,23 @@ public abstract class ConfigMapPropertySourceLocator implements PropertySourceLo
 
 	private static final Log LOG = LogFactory.getLog(ConfigMapPropertySourceLocator.class);
 
+	private final ConfigMapCache cache;
+
 	protected final ConfigMapConfigProperties properties;
 
+	/**
+	 * This constructor is deprecated, and we do not use it anymore internally. It will be
+	 * removed in the next major release.
+	 */
+	@Deprecated(forRemoval = true)
 	public ConfigMapPropertySourceLocator(ConfigMapConfigProperties properties) {
 		this.properties = properties;
+		this.cache = new ConfigMapCache.NOOPCache();
+	}
+
+	public ConfigMapPropertySourceLocator(ConfigMapConfigProperties properties, ConfigMapCache cache) {
+		this.properties = properties;
+		this.cache = cache;
 	}
 
 	protected abstract MapPropertySource getMapPropertySource(NormalizedSource normalizedSource,
@@ -66,14 +79,24 @@ public abstract class ConfigMapPropertySourceLocator implements PropertySourceLo
 		if (environment instanceof ConfigurableEnvironment env) {
 
 			CompositePropertySource composite = new CompositePropertySource("composite-configmap");
-			if (this.properties.isEnableApi()) {
+			if (this.properties.enableApi()) {
 				Set<NormalizedSource> sources = new LinkedHashSet<>(this.properties.determineSources(environment));
 				LOG.debug("Config Map normalized sources : " + sources);
-				sources.forEach(s -> composite.addFirstPropertySource(getMapPropertySource(s, env)));
+				sources.forEach(s -> {
+					MapPropertySource propertySource = getMapPropertySource(s, env);
+					if ("true".equals(propertySource.getProperty(Constants.ERROR_PROPERTY))) {
+						LOG.warn("Failed to load source: " + s);
+					}
+					else {
+						LOG.debug("Adding config map property source " + propertySource.getName());
+						composite.addFirstPropertySource(propertySource);
+					}
+				});
 			}
 
 			addPropertySourcesFromPaths(environment, composite);
 
+			cache.discardAll();
 			return composite;
 		}
 		return null;
@@ -85,7 +108,12 @@ public abstract class ConfigMapPropertySourceLocator implements PropertySourceLo
 	}
 
 	private void addPropertySourcesFromPaths(Environment environment, CompositePropertySource composite) {
-		Set<String> uniquePaths = new LinkedHashSet<>(properties.getPaths());
+		Set<String> uniquePaths = new LinkedHashSet<>(properties.paths());
+		if (!uniquePaths.isEmpty()) {
+			LOG.warn(
+					"path support is deprecated and will be removed in a future release. Please use spring.config.import");
+		}
+		LOG.debug("paths property sources : " + uniquePaths);
 		uniquePaths.stream().map(Paths::get).filter(p -> {
 			boolean exists = Files.exists(p);
 			if (!exists) {
@@ -99,10 +127,10 @@ public abstract class ConfigMapPropertySourceLocator implements PropertySourceLo
 				LOG.warn("Configured input path: " + p + " will be ignored because it is not a regular file");
 			}
 			return regular;
-		}).collect(Collectors.toList()).forEach(p -> {
+		}).toList().forEach(p -> {
 			try {
 				String content = new String(Files.readAllBytes(p)).trim();
-				String filename = p.toAbsolutePath().toString().toLowerCase();
+				String filename = p.toAbsolutePath().toString().toLowerCase(Locale.ROOT);
 				if (filename.endsWith(".properties")) {
 					addPropertySourceIfNeeded(c -> PROPERTIES_TO_MAP.apply(KEY_VALUE_TO_PROPERTIES.apply(c)), content,
 							filename, composite);
@@ -126,7 +154,8 @@ public abstract class ConfigMapPropertySourceLocator implements PropertySourceLo
 			LOG.warn("Property source: " + name + "will be ignored because no properties could be found");
 		}
 		else {
-			composite.addFirstPropertySource(new MapPropertySource(name, map));
+			LOG.debug("will add file-based property source : " + name);
+			composite.addFirstPropertySource(new MountConfigMapPropertySource(name, map));
 		}
 	}
 
